# yolov12-vehicle-detection-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/purwa_yolo/: main.py
training_code/: Train_YOLOv12_Vehicle_(1).ipynb
